Add gre tunneling support for the ML2 plugin
This patch add the type_driver GRE to enable teh creation of GRE
tunnels with the OVS agent

Change-Id: I1a33a4bd3ebc4c97eecf17a59ce16b8c2066ec66
Implements: blueprint ml2-gre

--- a/setup.cfg
+++ b/setup.cfg
@@ -87,6 +87,7 @@ quantum.ml2.type_drivers =
     flat = quantum.plugins.ml2.drivers.type_flat:FlatTypeDriver
     local = quantum.plugins.ml2.drivers.type_local:LocalTypeDriver
     vlan = quantum.plugins.ml2.drivers.type_vlan:VlanTypeDriver
+    gre = quantum.plugins.ml2.drivers.type_gre:GreTypeDriver
 
 [build_sphinx]
 all_files = 1
